objects/InsurancePolicy.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>This is used to consistently import data to a version of the SDO and translate data into other languages.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FINS_Q_Branch_Demo_Reference__c</fullName>
        <description>Field choice selection indicates that the corresponding record is referenced in one or more official Q-Branch demo guides.</description>
        <label>Q-Branch Demo Reference</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FINS_Q_Branch_Demo_Guide</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Household Insurance Policies</relationshipLabel>
        <relationshipName>HouseholdInsurancePolicies</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>All_InsurancePolicies</fullName>
        <filterScope>Everything</filterScope>
        <label>All Insurance Policies</label>
    </listViews>
    <recordTypes>
        <fullName>Commercial_Lines</fullName>
        <active>true</active>
        <description>Commercial Insurance policies for Accounts</description>
        <label>Commercial Lines</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>